overflow bug

--- a/public/css/radio-main.css
+++ b/public/css/radio-main.css
@@ -24,7 +24,7 @@ main.radio-station{
             nav.sticky-menu-top{
                 position: relative;
                 width: calc(100vw);
-                overflow-x: scroll;
+                overflow-x: auto;
                 &:after{
                     content: "";
                     position: absolute;
@@ -317,7 +317,7 @@ main.radio-station{
             grid-template-rows: auto auto 1fr;
             padding: 0 2rem;
             grid-template-columns: 1fr;
-            overflow-x: scroll;
+            overflow-x: auto;
             gap: 24px;
         }
     }
